@@ -8,6 +8,10 @@
       we constantly had to deal with errors in these backends that
       were'n present in our primary DBD::* targets.
 
+    - Remove Log::Log4perl. We weren't using it for anything except
+      printing one log line. Maybe we'll add it in the future with
+      proper support. See Issue #15.
+
 0.16 Mon Feb 22 17:08:46 GMT 2010
     - Don't seed a reply with a token which is too rare
     - Make the Word tokenizer split "example.com" into 3 tokens, while still
